--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = "*"
 graphene-django = "*"
 graphene = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
